# azfe_portfolio_api

./: .dockerignore  .env.development  .env.development.local  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  PROJECT_CONTEXT.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: README.md  lint.yml  tests.yml
app/: main.py
app/api/: dependencies.py  exception_handlers.py  middleware.py
app/api/middlewares/: __init__.py  logging_middleware.py  process_time_middleware.py
app/api/schemas/: __init__.py  additional_training_schema.py  certification_schema.py  common_schema.py  contact_info_schema.py  contact_messages_schema.py  cv_schema.py  education_schema.py  language_schema.py  profile_schema.py  programming_language_schema.py  projects_schema.py  skill_schema.py  social_networks_schema.py  tools_schema.py  work_experience_schema.py
app/api/v1/: router.py
app/application/: __init__.py
app/application/dto/: __init__.py  additional_training_dto.py  base_dto.py  certification_dto.py  contact_information_dto.py  contact_message_dto.py  cv_dto.py  education_dto.py  language_dto.py  profile_dto.py  programming_language_dto.py  project_dto.py  skill_dto.py  social_network_dto.py  tool_dto.py  work_experience_dto.py
app/application/use_cases/: __init__.py
app/config/: settings.py
app/domain/: README.md  __init__.py
app/domain/entities/: __init__.py  additional_training.py  certification.py  contact_information.py  contact_message.py  education.py  language.py  profile.py  programming_language.py  project.py  skill.py  social_network.py  tool.py  work_experience.py
app/domain/exceptions/: __init__.py  domain_errors.py
app/domain/value_objects/: __init__.py  contact_info.py  date_range.py  email.py  language_proficiency.py  phone.py  programming_language_level.py  skill_level.py
app/infrastructure/database/: database.py  mongo_client.py
app/infrastructure/mappers/: __init__.py  experience_mapper.py  language_mapper.py  programming_language_mapper.py  skill_mapper.py  tool_mapper.py
app/infrastructure/repositories/: __init__.py  experience_repository.py  language_repository.py  profile_repository.py  programming_language_repository.py  skill_repository.py  social_network_repository.py  tool_repository.py
app/infrastructure/services/: __init__.py  null_email_service.py  resend_email_service.py  (+2 more)
app/shared/: __init__.py
deployments/: docker-compose.yml
docker/development/: Dockerfile.dev  mongo-init.js
scripts/: validate_business_rules.py  validate_imports.py
tests/: __init__.py  conftest.py  pytest-duplicated.ini  test_connection.py
tests/e2e/: conftest.py  test_complete_cv_flow.py  test_contact_flow.py
tests/integration/: __init__.py  test_health.py
tests/unit/: __init__.py  test_config.py  test_imports.py  test_schemas.py  test_shared_exceptions.py
(+210 files in other folders)
